feat: scope cnscd impact workflow
